uprava controlleru a modelu